Fix dark mode Fix theme switch

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,12 @@
 $blue: #0063ce;
 $enable-shadows:"true";
 $enable-gradients:"true";
-
 @import "node_modules/bootstrap/scss/bootstrap";
 
 html,
 body,
 #root,
+#root > div,
 .container {
   height: 100%
 }
@@ -26,8 +26,10 @@ body {
   }
 }
 
+.stories {
+  height: 940%;
+}
 // Loader
-
 .loader-wrapper {
   top: 50%;
   position: relative;
@@ -55,22 +57,21 @@ body {
 }
 
 // Navbar
-
 .nav-scroller {
   position: relative;
   z-index: 2;
-  height: 2.75rem;
   overflow-y: hidden;
 }
 
 .nav-scroller .nav {
+  height: 2.75rem;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  padding-bottom: 1rem;
   margin-top: -1px;
   overflow-x: auto;
+  overflow-y: hidden;
   color: rgba(255, 255, 255, .75);
   text-align: center;
   white-space: nowrap;
@@ -78,84 +79,42 @@ body {
 }
 
 .nav-underline .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
+  padding: 0;
+  margin: 0 .75rem;
+  line-height: 2.75rem;
   font-size: .875rem;
-  color: #6c757d;
+  color: rgb(187, 187, 187);
 }
 
 .nav-underline .nav-link:hover {
-  color: #007bff;
+  color: #5500ce !important;
 }
 
 .nav-underline .active {
   font-weight: 500;
-  color: #5500ce;
+  color: #5500ce !important;
 }
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
-
-// Toogle Button
-
-div.button {
-  margin-top: .5rem;
-	height: 30px; width: 100px;
-  position: absolute;
-  right: 10px;
-	background: #25272a;
-	border-radius: 30px;
-		.toggle {
-			svg {
-				opacity: 1;
-				transform: translate(-50%, -50%);
-				transition: opacity 200ms ease-in-out, transform 160ms ease-in-out;
-			}
-		}
-	
-	&.active {
-		background: #eeeeee;
-		.toggle {
-			background: #25272a;
-			transform: translate(60px, -15%);
-			transition: background 240ms ease-in-out, transform 240ms ease-in-out;	
-			svg {
-				transform: translate(-36%, -50%) rotatez(180deg);
-				transition: opacity 200ms ease-in-out, transform 160ms ease-in-out;	
-			}
-		}
-		&:hover {
-			.toggle {
-				svg {
-					transform: translate(-46%, -50%) rotatez(180deg); 
-					transition: opacity 200ms ease-in-out, transform 160ms ease-in-out;	
-				}
-			}
-		}
-	}
+// Theme Toggle Switch
+.theme-switch {
+  position: absolute !important;
+  top: .5rem;
+  right: 1rem;
 }
 
-.toggle {
-	height: 40px; width: 40px;
-  // position: absolute; top: 50%; 
-  transform: translate(0, -15%);
-  background: #141518;
-  display: block;
-	border-radius: 60px;
-	box-shadow: 0px 4px 4px rgba(13,13,13,.3);
-	transition: background 240ms ease-in-out, transform 240ms ease-in-out;
-	svg {
-		width: 40%;
-		position: absolute; top: 50%; left: 48%; transform: translate(-60%, -50%);
-		opacity: 0;
-		transition: opacity 200ms ease-in-out, transform 160ms ease-in-out;
-	}
+// Media Queries
+@include media-breakpoint-up(sm) {
+  .theme-switch {
+    position: relative !important;
+    left: 3rem;
+  }
 }
 
 // Keyframes
-
 @keyframes loader {
   0% {
     transform: rotate(0);
